[package]
name = "bubblegum"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "bubblegum"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.29.1"
mpl-bubblegum = "1.2.0"
solana-sdk = "1.17.0"
solana-client = "1.17.0"
solana-program = "1.17.0"
borsh = "0.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
bs58 = "0.5.0"
